--- a/04-heroes-spa/index.html
+++ b/04-heroes-spa/index.html
@@ -7,6 +7,8 @@
     <title>Vite + React + TS</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
 <div id="root"></div>
